# llm_flask

./: main.py  pyproject.toml  running.bat
models/request_model/llm_question/: question_llm.py
models/response_model/llm_answer/: answer_llm.py
routing/backend_api/: llm_controller.py
views/: index.html
